[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/animated/player_running.tres" type="SpriteFrames" id=1]
[ext_resource path="res://sounds/effect/snd_jump.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/effect/snd_land.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/effect/snd_jetpack1.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://sprites/UI/grey_tickGrey.png" type="Texture" id=6]
[ext_resource path="res://sprites/UI/blue_tick.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.18996, 12.5494 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.242424, 1 ), 0.0, 0.9, 0, 0, Vector2( 1, 0.327273 ), -0.355556, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=2]
max_value = 10.0
bake_resolution = 1000
_data = [ Vector2( 0, 1.09091 ), 0.0, 0.0, 0, 0, Vector2( 1, 2.45455 ), -7.00573, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
width = 4096
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.39
trail_divisor = 2
trail_size_modifier = SubResource( 3 )
emission_shape = 1
emission_sphere_radius = 1.2
flag_disable_z = true
direction = Vector3( 0, 0.166, 0 )
spread = 10.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
linear_accel_random = 0.58
radial_accel = -61.73
damping = 29.03
angle = 45.0
angle_random = 0.67
scale_curve = SubResource( 6 )
color = Color( 0.647059, 0.588235, 0.776471, 1 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 624, 496 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.55208, 3.86454 )
shape = SubResource( 1 )

[node name="SndJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Sounds"

[node name="SndLand" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="SndJetpack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="jetfuel_bar" type="TextureProgress" parent="."]
visible = false
margin_left = 10.2678
margin_top = -18.3658
margin_right = 27.2678
margin_bottom = -1.36575
size_flags_horizontal = 0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.380392 )
stretch_margin_left = 12
stretch_margin_top = 12
stretch_margin_right = 12
stretch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jet_parts" type="Particles2D" parent="."]
z_index = -1
emitting = false
amount = 64
speed_scale = 0.5
randomness = 0.5
visibility_rect = Rect2( -100, -30, 200, 200 )
local_coords = false
draw_order = 1
process_material = SubResource( 4 )
